# iroh-mdns-ios-demo

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
MdnsTest/MdnsTest/: ContentView.swift  Info.plist  MdnsTestApp.swift  PeerBridge.swift
MdnsTest/MdnsTest.xcodeproj/: project.pbxproj
MdnsTest/MdnsTest.xcodeproj/project.xcworkspace/xcuserdata/jamespine.xcuserdatad/: UserInterfaceState.xcuserstate
MdnsTest/MdnsTest.xcodeproj/xcuserdata/jamespine.xcuserdatad/xcschemes/: xcschememanagement.plist
MdnsTest/MdnsTestTests/: MdnsTestTests.swift
MdnsTest/MdnsTestUITests/: MdnsTestUITests.swift  MdnsTestUITestsLaunchTests.swift
mdns-peer/: Cargo.toml  build.rs
mdns-peer/src/: lib.rs  main.rs
xtask/: README.md
xtask/src/: main.rs
