[workspace]
members = ["mdns-peer", "xtask"]
resolver = "2"

[workspace.dependencies]
iroh = { path = "../iroh/iroh", features = ["discovery-local-network"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
n0-future = "0.1.2"

# [patch.crates-io]
# # Use our patched swarm-discovery with PTR records
# swarm-discovery = { path = "../swarm-discovery-patched" }
